--- a/Website/index.html
+++ b/Website/index.html
@@ -12,7 +12,7 @@
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="open-iconic/css/open-iconic-bootstrap.min.css">
-
+  <link rel="stylesheet" href="src/pikaday.css">
   <!-- Custom styles for this template -->
   <link href="narrow-jumbotron.css" rel="stylesheet">
 </head>
@@ -72,15 +72,19 @@
         <div class="form-group">
           <label for="exampleInputEmail1">Email address</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          <small id="emailHelp" class="form-text text-muted">Sollte es Fragen oder Änderungen geben schreiben wir dieser E-mail Adresse. Wichtige Infos kommen aber auch in
+            den Abi-Chat.</small>
         </div>
         <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input type="text" class="form-control datepicker" id="exampleInputPassword1" placeholder="Password">
+          <label for="exampleInputPassword1">Geburtstag</label>
+          <input type="text" class="form-control" id="datepicker">
         </div>
         <div class="form-check">
           <label class="form-check-label">
-            <input type="checkbox" class="form-check-input"> Check me out
+            <input type="checkbox" class="form-check-input" /> Check me out
+          </label>
+          <label class="form-check-label">
+            <input type="checkbox" class="form-check-input" /> Check me out
           </label>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
@@ -112,6 +116,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
     crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script src="src/pikaday.js"></script>
+  <script>
+    var picker = new Pikaday({ field: $('#datepicker')[0] });
+  </script>
   <script>
     $(function () {
       $(".datepicker").datepicker();
