--- a/Website/signin.html
+++ b/Website/signin.html
@@ -27,7 +27,7 @@
         <input type="text" id="inputCode" class="form-control" placeholder="Code" required autofocus>
         <div class="checkbox">
           <label>
-            <input type="checkbox" value="remember-me"> Remember me
+            <input type="checkbox" value="remember-me" checked> Remember me
           </label>
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
